hphp/test/zend/bad/ext-standard-filters/filter_errors_zlib_inflate.php
<?php
require 'filter_errors.inc';
filter_errors_test('zlib.inflate', gzencode(b'42'));
?>